<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/section_update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/appwidget_update_title_track"
                style="@style/AppWidgetLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/widget_title_track" />

            <TextView
                android:id="@+id/appwidget_update_artist_name"
                style="@style/AppWidgetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_artist_name" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/widget_btn_previous"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_rewind"
            android:contentDescription="@string/imagePrevious"
            android:layout_marginEnd="32dp"
            />

        <ImageButton
            android:id="@+id/widget_btn_play"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_play"
            android:contentDescription="@string/imagePlay"
            />

        <ImageButton
            android:id="@+id/widget_btn_pause"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_pause"
            android:contentDescription="@string/imagePause"
            android:visibility="gone"
            />

        <ImageButton
            android:id="@+id/widget_btn_next"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_forward"
            android:contentDescription="@string/imageNext"
            android:layout_marginStart="32dp"
            />

    </LinearLayout>

</RelativeLayout>